fix: change title name

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/img/SentienceLogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Twin Sentience</title>
+    <title>Friends Connection</title>
   </head>
   <body>
     <div id="root"></div>
